--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -29,12 +29,12 @@
           
               <!-- Контент блока -->
               <div class="mt-2">
-                      {% csrf_token %}
-                      <p class="hidden">{{ task_form.name }}</p>
-                      {{ task_form.description }}
-                      <button name="update_task" type="submit" class="mt-2 px-4 py-1 bg-blue-500 text-white rounded hover:bg-blue-600 transition">
-                          Сохранить
-                      </button>
+                  {% csrf_token %}
+                  <p class="hidden">{{ task_form.name }}</p>
+                  {{ task_form.description }}
+                  <button name="update_task" type="submit" class="mt-2 px-4 py-1 bg-blue-500 text-white rounded hover:bg-blue-600 transition">
+                      Сохранить
+                  </button>
               </div>
           </details>
         </form>
@@ -44,7 +44,7 @@
         <!-- Подзадачи -->
         <div>
           <details class="group">
-            <summary class="cursor-pointer font-semibold text-gray-700 flex items-center justify-between">
+            <summary class="cursor-pointer font-semibold text-gray-700 flex items-center">
               <div class="flex items-center text-lg">
                 <!-- Стрелка -->
                 <div class="w-5 h-5 flex items-center justify-center transition-transform transform group-open:rotate-90 mr-2">
@@ -54,7 +54,9 @@
                 </div>
                 Подзадачи
               </div>
-              <button class="ml-2 text-white bg-gray-400 hover:bg-gray-500 text-sm rounded w-6 h-6 leading-4">+</button>
+              <button class="border-2 border-dashed border-gray-400 hover:border-sky-500 hover:text-sky-500 bg-white ml-2 p-2 px-3 text-base rounded-lg leading-4 transition-all duration-300 ease-in-out transform shadow-sm hover:shadow-md">
+                + добавить
+              </button>
             </summary>
         
             <!-- Контент -->
@@ -68,7 +70,7 @@
         <!-- Вложения -->
         <div>
           <details class="group">
-            <summary class="cursor-pointer font-semibold text-gray-700 flex items-center justify-between">
+            <summary class="cursor-pointer font-semibold text-gray-700 flex items-center">
               <div class="flex items-center text-lg">
                 <!-- Стрелка -->
                 <div class="w-5 h-5 flex items-center justify-center transition-transform transform group-open:rotate-90 mr-2">
@@ -78,7 +80,9 @@
                 </div>
                 Вложения
               </div>
-              <button class="ml-2 text-white bg-gray-400 hover:bg-gray-500 text-sm rounded w-6 h-6 leading-4">+</button>
+              <button class="border-2 border-dashed border-gray-400 hover:border-sky-500 hover:text-sky-500 bg-white ml-2 p-2 px-3 text-base rounded-lg leading-4 transition-all duration-300 ease-in-out transform shadow-sm hover:shadow-md">
+                + добавить
+              </button>
             </summary>
         
             <div class="mt-2 pl-6 text-gray-600">
