--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -60,11 +60,23 @@
             </summary>
         
             <!-- Контент -->
-            <div class="mt-2 pl-6 text-gray-600">
-              <p class="text-sm italic">Пока нет подзадач.</p>
+            <div class="bg-gray-200 mt-2 py-2 px-6 text-gray-600 flex justify-center">
+              <div class="w-full">
+                {% if task.subtasks.exists %}
+                  <div id="subtasks-{{ task.pk }}">
+                    {% for subtask in task.subtasks.all %}
+                      {% include 'tasks/includes/subtasks.html' %}
+                    {% endfor %}
+                  </div>
+                {% else %}
+                  <p class="text-sm font-bold italic text-center">Пока нет подзадач.</p>
+                {% endif %}
+              </div>
             </div>
+            
           </details>
         </div>
+        
         <hr>
     
         <!-- Вложения -->
