--- a/Project_Manager/templates/tasks/includes/subtasks.html
+++ b/Project_Manager/templates/tasks/includes/subtasks.html
@@ -4,7 +4,7 @@
 
 <!-- Основной блок задачи -->
 <div class="mb-2">
-    <div id="taskDiv-{{subtask.pk}}" class="flex items-center bg-white shadow-sm rounded-2xl border border-gray-300 p-4 relative">
+    <div id="subtaskDiv-{{subtask.pk}}" class="flex items-center bg-white shadow-sm rounded-2xl border border-gray-300 p-4 relative">
 
 
         <!-- Аватар -->
@@ -66,7 +66,12 @@
                         </a>
                     </li>   
                     <li>
-                        <a class="text-red-600 hover:bg-red-500 hover:text-white flex items-center gap-2">
+                        <a class="text-red-600 hover:bg-red-500 hover:text-white flex items-center gap-2"
+                        hx-post="{% url_task subtask 'task_delete' %}"
+                        hx-vals='{"task_pk": "{{subtask.pk}}"}'
+                        hx-target="#subtaskDiv-{{subtask.pk}}"
+                        hx-swap="delete"
+                        >
                             <i class="fas fa-trash-alt"></i>
                             Удалить
                         </a>
