--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -138,9 +138,21 @@
     
         <div>
           <h3 class="text-gray-700 font-bold text-base mb-1">Исполнители</h3>
-          <p class="text-gray-700">Не заданы</p>
+          {% if executors %}
+          <div class="flex flex-wrap">
+            {% for executor in executors %}
+              <p class="text-gray-700 mr-2">{{executor}}</p>
+              <p class="text-gray-700 mr-2">{{executor}}</p>
+              <p class="text-gray-700 mr-2">{{executor}}</p>
+              <p class="text-gray-700 mr-2">{{executor}}</p>
+              <p class="text-gray-700 mr-2">{{executor}}</p>
+            {% endfor %}
+          </div>
+          {% else %}
+            <p class="text-gray-700">Не заданы</p>
+          {% endif %}
         </div>
-    
+        
         <div>
           <div class="flex items-center mb-2">
             <h3 class="text-gray-700 font-bold text-base mb-0 leading-none">Теги</h3>
