--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -136,21 +136,20 @@
       <!-- Правый сайдбар -->
       <div class="w-1/5 h-[82vh] bg-white border-l border-b border-gray-300 shadow-sm p-4 space-y-6">
     
-        <div>
+        <div class="">
+          
           <h3 class="text-gray-700 font-bold text-base mb-1">Исполнители</h3>
           {% if executors %}
-          <div class="flex flex-wrap">
-            {% for executor in executors %}
-              <p class="text-gray-700 mr-2">{{executor}}</p>
-              <p class="text-gray-700 mr-2">{{executor}}</p>
-              <p class="text-gray-700 mr-2">{{executor}}</p>
-              <p class="text-gray-700 mr-2">{{executor}}</p>
-              <p class="text-gray-700 mr-2">{{executor}}</p>
-            {% endfor %}
+            <div class="group relative border border-gray-200 rounded-md p-2 flex flex-wrap">
+              {% for executor in executors %}
+                <p class="z-20 text-gray-700 mr-2">{{executor}}</p>
+              {% endfor %}
+            {% else %}
+              <p class="text-gray-700">Не заданы</p>
+            {% endif %}
+            <div class="absolute inset-0 z-10 rounded-md bg-gray-200 cursor-pointer opacity-0 group-hover:opacity-100"></div>
           </div>
-          {% else %}
-            <p class="text-gray-700">Не заданы</p>
-          {% endif %}
+          
         </div>
         
         <div>
