--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -139,16 +139,17 @@
         <div class="">
           
           <h3 class="text-gray-700 font-bold text-base mb-1">Исполнители</h3>
-          {% if executors %}
-            <div onclick="change_executor_modal.showModal();" class="group relative border border-gray-200 rounded-md p-2 flex flex-wrap">
+          <div onclick="change_executor_modal.showModal();" class="group relative border border-gray-200 rounded-md p-2 flex flex-wrap">
+            {% if executors %}
               {% for executor in executors %}
-                <p class="z-20 text-gray-700 mr-2">{{executor}}</p>
+                <p class="z-20 text-gray-700 mr-2">{{ executor }}</p>
               {% endfor %}
             {% else %}
               <p class="text-gray-700">Не заданы</p>
             {% endif %}
             <div class="absolute inset-0 z-10 rounded-md bg-gray-200 cursor-pointer opacity-0 group-hover:opacity-100"></div>
           </div>
+          
           {% include 'tasks/includes/change-executor-modal.html' %}
         </div>
         
@@ -209,7 +210,7 @@
           </div>
         </dialog>
         
-        <div id="status-{{task.pk}}">
+        <div id="statusDiv-{{task.pk}}">
           <h2 class="text-gray-700 font-bold mb-2">Статус</h2>
           {% include 'tasks/includes/change-status.html' %}
         </div>
