--- a/Project_Manager/templates/tasks/includes/comment.html
+++ b/Project_Manager/templates/tasks/includes/comment.html
@@ -25,5 +25,12 @@
     </div>
     </div>
     <p class="text-gray-800 break-all max-w-full overflow-x-auto">{{ comment.content }}</p>
+    
+    <script>
+        const noCommentsText = document.getElementById('no-comments-text');
+        if (noCommentsText) {
+            noCommentsText.style.display = 'none';
+        }
+    </script>
 
 </div>
