--- a/Project_Manager/templates/notifications.html
+++ b/Project_Manager/templates/notifications.html
@@ -1,4 +1,58 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<div id="content" class="p-6">
+    <div class="flex items-center p-4 mb-1">
+      <!-- Левая часть: кнопка -->
+  
+      <div class="flex items-center gap-x-4 text-2xl font-semibold text-black">
+        <div class="btn-group">
+            <input type="radio" name="view" value="new" class="btn btn-outline btn-md" aria-label="Новые" checked />
+            <input type="radio" name="view" value="read" class="btn btn-outline btn-md" aria-label="Прочитанные" />
+          </div>          
+      </div>
+      
+      <!-- Центральная часть: строка поиска по центру -->
+      <div class="flex-1 flex justify-center">
+          <div class="relative max-w-2xl w-full">
+              <input 
+                  type="text" 
+                  name="search1"
+                  placeholder="Поиск..." 
+                  class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
+              />
+              <svg 
+                  class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
+                  fill="none" 
+                  viewBox="0 0 24 24" 
+                  stroke="currentColor"
+              >
+                  <path 
+                      stroke-linecap="round" 
+                      stroke-linejoin="round" 
+                      stroke-width="2" 
+                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" 
+                  />
+              </svg>
+          </div>
+      </div>
+  
+      <!-- <div class="flex-none">
+        <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="add_project_modal.showModal();">
+            Создать
+        </button>
+      </div> -->
+  
+    </div>
+  
+  
+    <!-- Контейнер списка -->
+    <div id="psa" class="space-y-3">
+  
+      
+      
+    </div>
+</div>
+
 {% endblock content %}
