--- a/Project_Manager/templates/projects/includes/members.html
+++ b/Project_Manager/templates/projects/includes/members.html
@@ -35,10 +35,10 @@
     </div>
 
     <div class="flex-none">
-        <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="modal_create_tag.showModal();">
+        <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="add_members_modal.showModal();">
             Добавить участников
         </button>
-
+        {% include 'projects/includes/add-members-modal.html' %}
     </div>
 
     </div>
