--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="hidden lg:flex lg:flex-1 lg:justify-end">
 				{% if user.is_authenticated %}
-					<a href="#" class="btn btn-primary text-xl font-semibold text-white mr-6">Профиль</a>
+					<a href="{% url 'users:profile' %}" class="btn btn-primary text-xl font-semibold text-white mr-6">Профиль</a>
 					<a href="{% url 'users:logout' %}" class="btn btn-primary text-xl font-semibold text-white">Выйти</a>
 				{% else %}
 					<a href="{% url 'users:login' %}" class="btn btn-primary text-xl font-semibold text-white mr-6">Войти</a>
