--- a/Project_Manager/templates/users/profile.html
+++ b/Project_Manager/templates/users/profile.html
@@ -43,8 +43,7 @@
     <section class="mb-8">
       <h2 class="text-2xl font-semibold mb-2">ОПИСАНИЕ О СЕБЕ</h2>
       <p class="text-gray-600 mb-2">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab minima amet accusantium provident,
-        dignissimos corporis reprehenderit numquam nobis ex dolore?
+        {{ profile.description|default:"Тут пока пусто" }}
       </p>
     </section>
 
@@ -52,7 +51,9 @@
     <section class="mb-8">
       <h2 class="text-2xl font-semibold mb-4">ТЕГИ</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-        <div>тег 1 тег 2 тег 3</div>
+        {% for tag in profile.tags.all %}
+        {{tag.name}}
+        {% endfor %}
       </div>
     </section>
 
@@ -61,7 +62,7 @@
       <h2 class="text-2xl font-semibold mb-4">Контактная информация</h2>
       <div class="bg-white shadow rounded-lg p-6">
         <p class="mb-2"><strong>Email:</strong> {{ user.email }}</p>
-        <p class="mb-2"><strong>Телефон:</strong> +7 (999) 123-45-67</p>
+        <p class="mb-2"><strong>Телефон:</strong> {{ profile.phone_number|default:"---" }}</p>
         <p class="mb-2"><strong>Социальные сети:</strong> Телеграм </p>
       </div>
     </section>
