--- a/Project_Manager/templates/users/profile.html
+++ b/Project_Manager/templates/users/profile.html
@@ -31,12 +31,10 @@
   <main class="flex-1">
 
     <!-- Tabs -->
-    <div role="tablist" class="tabs tabs-boxed mb-6">
-      <a role="tab" class="tab tab-active">About</a>
-      <a role="tab" class="tab">Services</a>
-      <a role="tab" class="tab">Works</a>
-      <a role="tab" class="tab">Blogs</a>
-      <a role="tab" class="tab">Contact</a>
+    <div role="tablist" class="tabs tabs-boxed bg-gray-300 mb-6">
+      <a role="tab" class="tab tab-active">О себе</a>
+      <a role="tab" class="tab">Редактировать</a>
+      <a role="tab" class="tab">Со стороны</a>
     </div>
 
     <!-- About Section -->
@@ -63,7 +61,11 @@
       <div class="bg-white shadow rounded-lg p-6">
         <p class="mb-2"><strong>Email:</strong> {{ user.email }}</p>
         <p class="mb-2"><strong>Телефон:</strong> {{ profile.phone_number|default:"---" }}</p>
-        <p class="mb-2"><strong>Социальные сети:</strong> Телеграм </p>
+        <p class="mb-2"><strong>Социальные сети:</strong>
+          {% for social in social_links %}
+          <a href="{{ social.link }}">{{ social.network }}</a> 
+          {% endfor %}
+        </p>
       </div>
     </section>
 
