--- a/Project_Manager/templates/includes/header-team-conf.html
+++ b/Project_Manager/templates/includes/header-team-conf.html
@@ -8,7 +8,7 @@
     </div>
 
     <div>
-        <a href="{% url 'teams:projects:project_list' team.id %}" class="inline-block px-5 py-2 border-b-2 border-transparent text-gray-500 hover:text-gray-700 hover:border-blue-300 transition-all duration-200 font-medium">
+        <a href="{% url 'teams:projects:project_list' team.id %}" class="inline-block px-5 py-2 border-b-2 border-transparent text-gray-800 hover:text-gray-700 hover:border-blue-300 transition-all duration-200 font-medium">
             Вернуться к проектам
         </a>
     </div>
@@ -16,25 +16,25 @@
     <!-- Правая часть шапки - элементы управления -->
     <div class="flex items-center space-x-4">
         <!-- Кнопка "Участники" -->
-        <a href="{% url 'teams:team_members' team.id %}" class="btn btn-outline btn-sm flex items-center">
+        <a href="{% url 'teams:team_members' team.id %}" class="btn btn-outline btn-sm flex items-center text-gray-800 hover:text-blue-600">
             <i class="fas fa-users mr-2"></i>
             Участники
         </a>
         
         <!-- Кнопка "Конфигурация" -->
-        <a href="{% url 'teams:team_conf' team.id %}" class="btn btn-outline btn-sm flex items-center">
+        <a href="{% url 'teams:team_conf' team.id %}" class="btn btn-outline btn-sm flex items-center text-gray-800 hover:text-blue-600">
             <i class="fas fa-cog mr-2"></i>
             Конфигурация
         </a>
         
         <!-- Выпадающее меню "Прочее" -->
         <div class="dropdown dropdown-end">
-            <div tabindex="0" role="button" class="btn btn-outline btn-sm flex items-center">
+            <div tabindex="0" role="button" class="btn btn-outline btn-sm flex items-center text-gray-800 hover:text-blue-600">
                 <i class="fas fa-ellipsis-h mr-2"></i>
                 Прочее
             </div>
             <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-neutral-50 rounded-box w-52">
-                <li><a><i class="fas fa-history mr-2"></i>История изменений</a></li>
+                <li><a class="text-gray-800 hover:text-blue-600"><i class="fas fa-history mr-2"></i>История изменений</a></li>
                 <li><a href="{% url 'teams:delete_team' team.id %}?trigger=detail" class="text-red-500 hover:text-white hover:bg-red-500"><i class="fas fa-trash mr-2"></i>Удалить</a></li>
             </ul>
         </div>
