--- a/Project_Manager/templates/teams/includes/team_members.html
+++ b/Project_Manager/templates/teams/includes/team_members.html
@@ -16,27 +16,7 @@
             </tr>
         </thead>
         <tbody class="text-gray-600 text-sm font-light">
-            {% for user in team.team_member.all %}
-            <tr class="border-b border-gray-200 hover:bg-gray-100 transition-colors {% cycle 'bg-white' 'bg-gray-50' %}">
-                <td class="w-10 py-1 px-3 text-center whitespace-nowrap">{{ forloop.counter }}</td>
-                <td class="py-1 px-6 text-left font-bold">{{ user.username }}</td>
-                <td class="py-1 px-6 text-left">{{ user.email|default:"---" }}</td>
-                <td class="py-1 px-6 text-left">Кол-во проектов</td>
-                <td class="py-1 px-6 text-left">
-                    <div class="dropdown">
-                        <div tabindex="0" role="button" class="btn m-1 bg-gray-100 text-gray-800 rounded-2xl border-gray-400 hover:bg-gray-50 hover:border-sky-600 shadow-md">Гость <i class='fas fa-angle-down mt-1'></i></div>
-                        <ul tabindex="0" class="dropdown-content menu bg-white border border-gray-300 rounded-box z-[1] w-52 p-2 shadow-sm">
-                          <li><a>Админ</a></li>
-                          <li><a>Гость</a></li>
-                        </ul>
-                    </div>
-                </td>
-                <td class="py-1 px-6 text-left">Дата</td>
-                <td class="py-1 px-6 text-left rounded-xl hover:bg-red-500 hover:text-white" title="Исключить из команды">
-                    <i class="fa fa-trash"></i>
-                </td>
-            </tr>
-            {% endfor %}
+                {% include 'teams/includes/team_members_list.html' %}
         </tbody>
     </table>
 </div>
